--- a/src/main/webapp/app/login/login.component.html
+++ b/src/main/webapp/app/login/login.component.html
@@ -6,14 +6,14 @@
 
     <form (ngSubmit)="login()" [formGroup]="loginForm">
       <div class="input-group">
-        <input type="Username" class="figma-input" placeholder="Username" formControlName="username" />
+        <input #username type="text" class="figma-input" placeholder="Username" formControlName="username" />
       </div>
 
       <div class="input-group">
-        <input type="Password" class="figma-input" placeholder="Password" formControlName="password" />
+        <input type="password" class="figma-input" placeholder="Password" formControlName="password" />
       </div>
 
-      <button type="submit" class="figma-btn">Accedi</button>
+      <button type="submit" class="figma-btn" [class.btn-loading]="isLoading" [disabled]="isLoading">Accedi</button>
     </form>
 
     <div class="figma-footer">
