--- a/src/main/webapp/app/prenota-sala/prenota-sala.component.html
+++ b/src/main/webapp/app/prenota-sala/prenota-sala.component.html
@@ -30,7 +30,9 @@
     </div>
 
     <div class="button-group">
-      <button class="btn-conferma" (click)="confermaPrenotazione()">Conferma</button>
+      <button class="btn-conferma" [class.btn-loading]="caricamento" [disabled]="caricamento" (click)="confermaPrenotazione()">
+        Conferma
+      </button>
     </div>
   </div>
 </div>
