--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -1,12 +1,14 @@
-@import 'bootstrap-variables';
+/* DEFINIZIONE VARIABILI BOARDROOM */
+$br-primary: #4a8c40;
+
+@import './bootstrap-variables';
 @import 'bootstrap/scss/functions';
 @import 'bootswatch/dist/flatly/variables';
 @import 'bootstrap/scss/variables';
 
-/* ==============================================================
-Bootstrap tweaks
-===============================================================*/
-
+/* ==========================================================================
+   Bootstrap Tweaks
+   ========================================================================== */
 body,
 h1,
 h2,
@@ -16,7 +18,6 @@ h4 {
 }
 
 a:hover {
-  /* make sure browsers use the pointer cursor for anchors, even with no href */
   cursor: pointer;
 }
 
@@ -25,21 +26,8 @@ a:hover {
 }
 
 /* ==========================================================================
-Browser Upgrade Prompt
-========================================================================== */
-.browserupgrade {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
-}
-
-/* ==========================================================================
-Generic styles
-========================================================================== */
-
-/* other generic styles */
-
+   Generic Styles
+   ========================================================================== */
 .jh-card {
   padding: 1.5%;
   margin-top: 20px;
@@ -51,14 +39,9 @@ Generic styles
   background-color: red;
 }
 
-.pad {
-  padding: 10px;
-}
-
 .w-40 {
   width: 40% !important;
 }
-
 .w-60 {
   width: 60% !important;
 }
@@ -87,8 +70,8 @@ Generic styles
 }
 
 /* ==========================================================================
-Custom alerts for notification
-========================================================================== */
+   Alerts & Notifications
+   ========================================================================== */
 .alerts {
   .alert {
     text-overflow: ellipsis;
@@ -100,19 +83,10 @@ Custom alerts for notification
       padding: 0;
       margin: 0;
     }
-    .popover pre {
-      font-size: 10px;
-    }
   }
   .jhi-toast {
     position: fixed;
     width: 100%;
-    &.left {
-      left: 5px;
-    }
-    &.right {
-      right: 5px;
-    }
     &.top {
       top: 55px;
     }
@@ -129,16 +103,8 @@ Custom alerts for notification
 }
 
 /* ==========================================================================
-entity list page css
-========================================================================== */
-
-.table-entities thead th .d-flex > * {
-  margin: auto 0;
-}
-
-/* ==========================================================================
-entity detail page css
-========================================================================== */
+   Entity Details Layout
+   ========================================================================== */
 .row-md.jh-entity-details {
   display: grid;
   grid-template-columns: auto 1fr;
@@ -150,7 +116,6 @@ entity detail page css
   .row-md.jh-entity-details > {
     dt {
       float: left;
-      overflow: hidden;
       clear: left;
       text-align: right;
       text-overflow: ellipsis;
@@ -166,45 +131,45 @@ entity detail page css
 }
 
 /* ==========================================================================
-ui bootstrap tweaks
-========================================================================== */
-.nav,
-.pagination,
-.carousel,
-.panel-title a {
-  cursor: pointer;
-}
+   UNIVERSAL LOADER SYSTEM (Used everywhere)
+   ========================================================================== */
+.btn-loading {
+  position: relative !important;
+  pointer-events: none !important;
+  transition: all 0.2s;
 
-.thread-dump-modal-lock {
-  max-width: 450px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
+  color: transparent !important;
+  text-shadow: none !important;
 
-.dropdown-menu {
-  padding-left: 0;
-}
+  &::after {
+    content: '';
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    top: calc(50% - 100px / 10); /* Centrato verticalmente */
+    left: calc(50% - 10px);
+    border: 3px solid rgba(255, 255, 255, 0.3);
+    border-top-color: #ffffff;
+    border-radius: 50%;
+    animation: button-spin 0.6s linear infinite;
+    z-index: 2;
+  }
 
-/* ==========================================================================
-angular-cli removes postcss-rtl processed inline css, processed rules must be added here instead
-========================================================================== */
-/* page-ribbon.component.scss */
-.ribbon {
-  left: -3.5em;
-  -moz-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
-  -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-}
-
-/* navbar.component.scss */
-.navbar {
-  ul.navbar-nav {
-    .nav-item {
-      margin-left: 0.5em;
+  &.btn-outline-primary,
+  &.btn-light,
+  &.btn-details {
+    &::after {
+      border: 3px solid rgba(0, 0, 0, 0.1);
+      border-top-color: $br-primary;
     }
   }
 }
-/* jhipster-needle-scss-add-main JHipster will add new css style */
+
+@keyframes button-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
